--- a/VSTrac/VSTrac.csproj
+++ b/VSTrac/VSTrac.csproj
@@ -158,6 +158,8 @@
     <Content Include="LICENCE.TXT" />
     <Content Include="README.TXT" />
     <None Include="Resources\error.png" />
+    <None Include="Resources\Delete.bmp" />
+    <None Include="Resources\Refresh.bmp" />
     <Content Include="trac.ico" />
     <Content Include="VSTrac.AddIn" />
   </ItemGroup>
