* Added context menus to the Servers and Server nodes  * Added remove server functionality (closes #2)  * Added refreshing functionality to servers

--- a/VSTrac/VSTrac.csproj
+++ b/VSTrac/VSTrac.csproj
@@ -160,6 +160,7 @@
     <None Include="Resources\error.png" />
     <None Include="Resources\Delete.bmp" />
     <None Include="Resources\Refresh.bmp" />
+    <None Include="Resources\server_new.png" />
     <Content Include="trac.ico" />
     <Content Include="VSTrac.AddIn" />
   </ItemGroup>
