--- a/VSTrac/VSTrac.csproj
+++ b/VSTrac/VSTrac.csproj
@@ -51,6 +51,12 @@
     <Compile Include="AddNewServerForm.Designer.cs">
       <DependentUpon>AddNewServerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddNewTicketQueryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddNewTicketQueryForm.Designer.cs">
+      <DependentUpon>AddNewTicketQueryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -145,6 +151,10 @@
   <ItemGroup>
     <EmbeddedResource Include="AddNewServerForm.resx">
       <DependentUpon>AddNewServerForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddNewTicketQueryForm.resx">
+      <DependentUpon>AddNewTicketQueryForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
