* Fixed #23  * Finished Add New Server Wizard and added optional list of ticket queries (addresses #22) - Still some problems with SSL certificates though

--- a/VSTrac/VSTrac.csproj
+++ b/VSTrac/VSTrac.csproj
@@ -224,6 +224,7 @@
     <None Include="Resources\Delete.bmp" />
     <None Include="Resources\Refresh.bmp" />
     <None Include="Resources\server_new.png" />
+    <None Include="Resources\download_FTP_00.gif" />
     <Content Include="trac.ico" />
     <Content Include="VSTrac.AddIn" />
     <Content Include="Wizard\Wizard.bmp" />
