--- a/VSTrac/VSTrac.csproj
+++ b/VSTrac/VSTrac.csproj
@@ -82,6 +82,7 @@
       <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="ServerDetails.cs" />
+    <Compile Include="SortableBindingList.cs" />
     <Compile Include="Ticket.cs" />
     <Compile Include="TicketQueryDefinition.cs" />
     <Compile Include="TicketView.cs">
