--- a/VSTrac/VSTrac.csproj
+++ b/VSTrac/VSTrac.csproj
@@ -227,6 +227,7 @@
     <None Include="Resources\Refresh.bmp" />
     <None Include="Resources\server_new.png" />
     <None Include="Resources\download_FTP_00.gif" />
+    <None Include="vstrac.vscontent" />
     <Content Include="trac.ico" />
     <Content Include="VSTrac.AddIn" />
     <Content Include="Wizard\Wizard.bmp" />
