--- a/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
+++ b/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7BE482D5-18F8-4234-85C8-A65298B21A64}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -31,15 +31,47 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CookComputing.XmlRpcV2, Version=2.1.0.3, Culture=neutral, PublicKeyToken=a7d6e17aa302004d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\ext\xml-rpc.net\CookComputing.XmlRpcV2.dll</HintPath>
+    </Reference>
+    <Reference Include="Interop.BugTraqProvider, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\ext\tortoisesvn.net\Interop.BugTraqProvider.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BrowserConnect.cs" />
+    <Compile Include="TicketSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TicketSelector.Designer.cs">
+      <DependentUpon>TicketSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TracProvider.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <EmbeddedResource Include="TicketSelector.resx">
+      <DependentUpon>TicketSelector.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TracExplorer.TSVNTrac.reg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TracExplorer.Common\TracExplorer.Common.csproj">
+      <Project>{A2C1F604-DF0D-4514-A2B0-8E2C30907F05}</Project>
+      <Name>TracExplorer.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -47,4 +79,9 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PostBuildEvent>$(windir)\Microsoft.NET\Framework\v2.0.50727\RegAsm.exe $(TargetDir)$(TargetFileName) /codebase /regfile:$(TargetDir)TracExplorer.TSVNTrac.reg
+</PostBuildEvent>
+    <PreBuildEvent>regedit /s $(ProjectDir)TracExplorer.TSVNTrac.reg</PreBuildEvent>
+  </PropertyGroup>
 </Project>
