--- a/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
+++ b/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
@@ -43,6 +43,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrowserConnect.cs" />
+    <Compile Include="ParameterConnect.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TicketSelector.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -50,11 +56,26 @@
       <DependentUpon>TicketSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TracExplorerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TracExplorerForm.Designer.cs">
+      <DependentUpon>TracExplorerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TracProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="TicketSelector.resx">
       <DependentUpon>TicketSelector.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TracExplorerForm.resx">
+      <DependentUpon>TracExplorerForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
