--- a/src/TracExplorer.VSTrac/TracExplorer.VSTrac.csproj
+++ b/src/TracExplorer.VSTrac/TracExplorer.VSTrac.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="TicketWindowDefinition.cs" />
     <Compile Include="VSTracRoot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
