--- a/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
+++ b/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="BrowserConnect.cs" />
     <Compile Include="ParameterConnect.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
