--- a/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
+++ b/src/TracExplorer.TSVNTrac/TracExplorer.TSVNTrac.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7BE482D5-18F8-4234-85C8-A65298B21A64}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -46,7 +46,6 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="BrowserConnect.cs" />
-    <Compile Include="ParameterConnect.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -59,11 +58,11 @@
       <DependentUpon>TicketSelector.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TracExplorerForm.cs">
+    <Compile Include="AddNewProviderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TracExplorerForm.Designer.cs">
-      <DependentUpon>TracExplorerForm.cs</DependentUpon>
+    <Compile Include="AddNewProviderForm.Designer.cs">
+      <DependentUpon>AddNewProviderForm.cs</DependentUpon>
     </Compile>
     <Compile Include="TracProvider.cs" />
   </ItemGroup>
@@ -77,8 +76,8 @@
       <DependentUpon>TicketSelector.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="TracExplorerForm.resx">
-      <DependentUpon>TracExplorerForm.cs</DependentUpon>
+    <EmbeddedResource Include="AddNewProviderForm.resx">
+      <DependentUpon>AddNewProviderForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
