--- a/src/Installer/VersionNumberInclude.wxi.in
+++ b/src/Installer/VersionNumberInclude.wxi.in
@@ -5,7 +5,7 @@
   <?define MinorVersion="1" ?>
   <?define MicroVersion="0" ?>
   <!-- SerStatusVersion to "Beta", "Alpha". For "Release" leave it blank -->
-  <?define StatusVersion="Beta" ?>
+  <?define StatusVersion="RC1" ?>
   
 
   <!-- Automatic settings by SubWCRev from TortoiseSVN -->
